--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="styles.css">
 
@@ -10,21 +11,24 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap"
+    rel="stylesheet">
+
   <title>3-column preview card component | Frontend Mentor</title>
 </head>
+
 <body>
   <div class="container">
     <div class="car car-1">
       <div class="logo">
-        <img src="/images/icon-sedans.svg" alt="">
+        <img src="/images/icon-sedans.svg" alt="sedan-logo">
       </div>
       <div class="heading">
         <h1>SEDANS</h1>
       </div>
       <div class="para">
-        <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+        <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your
+          next road trip.</p>
       </div>
 
       <button class="btn">Learn More</button>
@@ -32,13 +36,13 @@
 
     <div class="car car-2">
       <div class="logo">
-        <img src="/images/icon-suvs.svg" alt="">
+        <img src="/images/icon-suvs.svg" alt="suvs-logo">
       </div>
       <div class="heading">
         <h1>SUVs</h1>
       </div>
       <div class="para">
-        <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+        <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
           and off-road adventures.</p>
       </div>
 
@@ -47,29 +51,26 @@
 
     <div class="car car-3">
       <div class="logo">
-        <img src="/images/icon-luxury.svg" alt="">
+        <img src="/images/icon-luxury.svg" alt="luxury-logo">
       </div>
       <div class="heading">
         <h1>LUXURY</h1>
       </div>
       <div class="para">
-        <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+        <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
           rental and arrive in style.</p>
       </div>
 
       <button class="btn">Learn More</button>
     </div>
   </div>
-  
-  
+
+
 
   <footer class="attribution">
     <p>
       Challenge by
-      <a
-        href="https://www.frontendmentor.io/challenges/stats-preview-card-component-8JqbgoU62"
-        >Frontend Mentor</a
-      >.
+      <a href="https://www.frontendmentor.io/challenges/stats-preview-card-component-8JqbgoU62">Frontend Mentor</a>.
     </p>
     <p>
       Coded by
@@ -77,4 +78,5 @@
     </p>
   </footer>
 </body>
+
 </html>
