--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="container">
     <div class="car car-1">
       <div class="logo">
-        <img src="/images/icon-sedans.svg" alt="sedan-logo">
+        <img src="./images/icon-sedans.svg" alt="sedan-logo">
       </div>
       <div class="heading">
         <h1>SEDANS</h1>
@@ -36,7 +36,7 @@
 
     <div class="car car-2">
       <div class="logo">
-        <img src="/images/icon-suvs.svg" alt="suvs-logo">
+        <img src="./images/icon-suvs.svg" alt="suvs-logo">
       </div>
       <div class="heading">
         <h1>SUVs</h1>
@@ -51,7 +51,7 @@
 
     <div class="car car-3">
       <div class="logo">
-        <img src="/images/icon-luxury.svg" alt="luxury-logo">
+        <img src="./images/icon-luxury.svg" alt="luxury-logo">
       </div>
       <div class="heading">
         <h1>LUXURY</h1>
